--- a/HW4/hw4_final.lyx
+++ b/HW4/hw4_final.lyx
@@ -215,22 +215,18 @@ So we need to modify the hessian in HW2 by dividing
 \end_layout
 
 \begin_layout Verbatim
-
     0.0101   -0.0123    0.0095    0.0548    
 \end_layout
 
 \begin_layout Verbatim
-
    -0.0123    0.0198   -0.0156   -0.0853     
 \end_layout
 
 \begin_layout Verbatim
-
     0.0095   -0.0156    0.0237    0.1034     
 \end_layout
 
 \begin_layout Verbatim
-
     0.0548   -0.0853    0.1034    0.4985
 \end_layout
 
@@ -281,22 +277,18 @@ The off diagonal shows the covariance between parameters.
 \end_layout
 
 \begin_layout Verbatim
-
     1.0000   -0.8685    0.6127    0.7721    
 \end_layout
 
 \begin_layout Verbatim
-
    -0.8685    1.0000   -0.7200   -0.8598     
 \end_layout
 
 \begin_layout Verbatim
-
     0.6127   -0.7200    1.0000    0.9520     
 \end_layout
 
 \begin_layout Verbatim
-
     0.7721   -0.8598    0.9520    1.0000
 \end_layout
 
@@ -372,17 +364,14 @@ cov(\boldsymbol{m}) & = & \boldsymbol{H}^{-1}
 \end_layout
 
 \begin_layout Verbatim
-
    1.0e-03 *
 \end_layout
 
 \begin_layout Verbatim
-
     0.3429   -0.0019    
 \end_layout
 
 \begin_layout Verbatim
-
    -0.0019    0.0004
 \end_layout
 
@@ -440,12 +429,10 @@ Using this new data error, we do the same calculation as above.
 \end_layout
 
 \begin_layout Verbatim
-
    23.7090   -0.1283    
 \end_layout
 
 \begin_layout Verbatim
-
    -0.1283    0.0249
 \end_layout
 
@@ -808,7 +795,7 @@ and
 \end_layout
 
 \begin_layout Subsubsection*
-(b) - 5 points
+(b) - 10 points
 \end_layout
 
 \begin_layout Standard
@@ -817,12 +804,12 @@ We can incorporate this information as a prior by multiplying our likelihood
 \begin_inset Formula $P(\{d_{k}\}|\boldsymbol{m})$
 \end_inset
 
- by a prior for model 
+ by a prior for the model 
 \begin_inset Formula $P(\boldsymbol{m})$
 \end_inset
 
 .
- In this case we will use a gaussian distribution for model parameter 
+ In this case we will use a Gaussian distribution for model parameter 
 \begin_inset Formula $p$
 \end_inset
 
@@ -874,7 +861,7 @@ So
 \begin_inset Formula $P(\phi)=\frac{1}{\phi}$
 \end_inset
 
- satisfies scale independent criterion.
+ satisfies the scale independent criterion.
 \end_layout
 
 \begin_layout Subsubsection*
@@ -894,7 +881,7 @@ We can again incorporate this information as a prior in our expression for
 \begin_layout Standard
 \begin_inset Formula 
 \begin{eqnarray*}
-P(\boldsymbol{m}|\{d_{k}\})=e^{-F(\boldsymbol{m})}\frac{1}{p}
+P(\boldsymbol{m}|\{d_{k}\})=e^{-F(\boldsymbol{m})}\frac{1}{p}=e^{-F(\boldsymbol{m})-ln(p)}
 \end{eqnarray*}
 
 \end_inset
@@ -915,7 +902,7 @@ We want to incorporate both independent pieces of information into our prior.
 \begin_layout Standard
 \begin_inset Formula 
 \begin{eqnarray*}
-P(\boldsymbol{m}|\{d_{k}\})=\frac{1}{p}e^{-F(\boldsymbol{m})}e^{-\frac{1}{2}(\frac{p-\mu}{\sigma})^{2}}
+P(\boldsymbol{m}|\{d_{k}\})=\frac{1}{p}e^{-F(\boldsymbol{m})}e^{-\frac{1}{2}(\frac{p-\mu}{\sigma})^{2}}=e^{-F_{old}(\boldsymbol{m})-\frac{1}{2}(\frac{p-\mu}{\sigma})^{2}-\ln(p)}
 \end{eqnarray*}
 
 \end_inset
@@ -1035,7 +1022,8 @@ Plot of combination of the Gaussian and scale invariant priors for p.
 It doesn't matter in what order we do things as long as priors for analysis
  are not biased by our data (and they shouldn't be) and your experiment
  is not affected by prior information.
- Suppose we have some prior information about 
+ An example of a situation in which the experiment is affected by prior
+ is that if we have some prior information about 
 \begin_inset Formula $x_{s}$
 \end_inset
 
@@ -1048,7 +1036,7 @@ It doesn't matter in what order we do things as long as priors for analysis
 \end_layout
 
 \begin_layout Subsubsection*
-(f) - 5 points
+(f) - 15 points
 \end_layout
 
 \begin_layout Standard
@@ -1301,7 +1289,7 @@ p
 \end_layout
 
 \begin_layout Standard
-Comparing with old solution , the new solution has 
+Comparing with old solution, the new solution has 
 \begin_inset Formula $p$
 \end_inset
 
@@ -1321,7 +1309,7 @@ Problem 3 (graded by Kangchen) - bonus 15 points
 \end_layout
 
 \begin_layout Subsubsection*
-(a)
+(a)-5 points
 \end_layout
 
 \begin_layout Standard
@@ -1343,25 +1331,8 @@ Minima of
 \begin{align}
 F(\mu) & =\frac{N-1}{2}\ln\left(\sum_{k=1}^{N}(x_{k}-\mu)^{2}\right),\\
 \frac{\partial F}{\partial\mu} & =-(N-1)\frac{\sum_{k=1}^{N}(x_{k}-\mu)}{\sum_{k=1}^{N}(x_{k}-\mu)^{2}}\\
-\frac{\partial^{2}F}{\partial\mu^{2}} & =(N-1)\frac{N\sum_{k=1}^{N}(x_{k}-\mu)^{2}+2\sum_{k=1}^{N}(x_{k}-\mu)}{\left(\sum_{k=1}^{N}(x_{k}-\mu)^{2}\right)^{2}}.
+\frac{\partial^{2}F}{\partial\mu^{2}} & =(N-1)\frac{N\sum_{k=1}^{N}(x_{k}-\mu)^{2}-2(\sum_{k=1}^{N}(x_{k}-\mu))^{2}}{\left(\sum_{k=1}^{N}(x_{k}-\mu)^{2}\right)^{2}}.
 \end{align}
-
-\end_inset
-
-Because 
-\begin_inset Formula $\exp$
-\end_inset
-
- and 
-\begin_inset Formula $\ln$
-\end_inset
-
- are monotonic functions, we therefore need to find the minimum of the sum
- of the equared error (least-squares) 
-\begin_inset Formula 
-\begin{equation}
-\sum_{k=1}^{N}(x_{k}-\mu)^{2}=0.
-\end{equation}
 
 \end_inset
 
@@ -1381,31 +1352,10 @@ Taking the derivative with respct to
 
 \end_inset
 
-which is the sample mean of the data.
- For the standard deviation 
-\begin_inset Formula $\sigma_{\mu}$
-\end_inset
-
- we expand 
-\begin_inset Formula $F$
-\end_inset
-
- to second order and insert 
-\begin_inset Formula $\mu_{0}$
-\end_inset
-
-, i.e., 
-\begin_inset Formula 
-\begin{equation}
-p(\mu|x)\propto e^{-F(\mu)}\approx e^{-F(\mu_{0})-\frac{1}{2}F''(\mu_{0})(\mu-\mu_{0})^{2}},
-\end{equation}
-
-\end_inset
-
 For the second derivate at the best fit solution we have 
 \begin_inset Formula 
 \begin{equation}
-\frac{\partial^{2}F}{\partial\mu^{2}}=\frac{N(N-1)}{\sum_{k=1}^{N}(x_{k}-\mu)^{2}}.
+\frac{\partial^{2}F}{\partial\mu^{2}}(\mu=\mu_{0})=\frac{N(N-1)}{\sum_{k=1}^{N}(x_{k}-\mu_{0})^{2}}.
 \end{equation}
 
 \end_inset
@@ -1434,7 +1384,7 @@ is the sample variance of the data.
 \end_layout
 
 \begin_layout Subsubsection*
-(b)
+(b)-5 points
 \end_layout
 
 \begin_layout Standard
@@ -1491,7 +1441,7 @@ We assume
 \end_inset
 
 , then 
-\begin_inset Formula $Q=\begin{bmatrix}cos(\theta) & -sin(\theta)\\
+\begin_inset Formula $\boldsymbol{Q}=\begin{bmatrix}cos(\theta) & -sin(\theta)\\
 sin(\theta) & cos(\theta)
 \end{bmatrix}$
 \end_inset
@@ -1502,10 +1452,39 @@ sin(\theta) & cos(\theta)
 \end_inset
 
  degree counterclockwise.
+ Another way to interpret what 
+\begin_inset Formula $\boldsymbol{Q}$
+\end_inset
+
+ did is that 
+\begin_inset Formula $\boldsymbol{Q}^{T}\begin{pmatrix}x\\
+y
+\end{pmatrix}$
+\end_inset
+
+ gives the projection of 
+\begin_inset Formula $\begin{pmatrix}x\\
+y
+\end{pmatrix}$
+\end_inset
+
+ onto 
+\begin_inset Formula $\boldsymbol{e}_{1}$
+\end_inset
+
+and 
+\begin_inset Formula $\boldsymbol{e}_{2}$
+\end_inset
+
+where 
+\begin_inset Formula $\boldsymbol{Q}=(\boldsymbol{e}_{1},\boldsymbol{e}_{2}).$
+\end_inset
+
+
 \end_layout
 
 \begin_layout Subsubsection*
-(c)
+(c)-5 points
 \end_layout
 
 \begin_layout Standard
@@ -1514,17 +1493,41 @@ We need to show that
 \end_inset
 
 .
- We are deadling with an integral of the form 
+ We are dealing with an integral of the f
 \begin_inset Formula 
 \begin{align}
-\sigma_{x}^{2} & =\frac{\int dxdy\,x^{2}\exp\left(-\frac{1}{2}x^{T}Ax\right)}{\int dxdy\,\exp\left(-\frac{1}{2}x^{T}Ax\right)}\\
- & =\frac{\int dxdy\,x^{2}\exp\left(-\frac{1}{2}(Ax^{2}+2Cxy+By^{2})\right)}{\int dxdy\,\exp\left(-\frac{1}{2}(Ax^{2}+2Cxy+By^{2})\right)}\\
- & =\frac{\int dxdy\,x^{2}\exp\left(-\frac{1}{2}(A-C^{2}/B)x^{2}-\frac{1}{2}B(y+Cx/B)^{2}\right)}{\int dxdy\,\exp\left(-\frac{1}{2}(A-C^{2}/B)x^{2}-\frac{1}{2}B(y+Cx/B)^{2}\right)}\\
- & =\frac{\int dx\,x^{2}\exp\left(-\frac{1}{2}(A-C^{2}/B)x^{2}\right)}{\int dx\,\exp\left(-\frac{1}{2}(A-C^{2}/B)x^{2}\right)}
+\sigma_{x}^{2} & =\frac{\int_{-\infty}^{+\infty}\int_{-\infty}^{+\infty}dxdy\,x^{2}\exp\left(-\frac{1}{2}x^{T}Ax\right)}{\int_{-\infty}^{+\infty}\int_{-\infty}^{+\infty}dxdy\,\exp\left(-\frac{1}{2}x^{T}Ax\right)}\\
+ & =\frac{\int_{-\infty}^{+\infty}\int_{-\infty}^{+\infty}dxdy\,x^{2}\exp\left(-\frac{1}{2}(Ax^{2}+2Cxy+By^{2})\right)}{\int_{-\infty}^{+\infty}\int_{-\infty}^{+\infty}dxdy\,\exp\left(-\frac{1}{2}(Ax^{2}+2Cxy+By^{2})\right)}\\
+ & =\frac{\int_{-\infty}^{+\infty}\int_{-\infty}^{+\infty}dxdy\,x^{2}\exp\left(-\frac{1}{2}(A-C^{2}/B)x^{2}-\frac{1}{2}B(y+Cx/B)^{2}\right)}{\int_{-\infty}^{+\infty}\int_{-\infty}^{+\infty}dxdy\,\exp\left(-\frac{1}{2}(A-C^{2}/B)x^{2}-\frac{1}{2}B(y+Cx/B)^{2}\right)}\\
+ & =\frac{\int_{-\infty}^{+\infty}dx\,x^{2}\exp\left(-\frac{1}{2}(A-C^{2}/B)x^{2}\right)\mbox{\int_{-\infty}^{+\infty}\ensuremath{dy}exp}\left(-\frac{1}{2}B(y+Cx/B)^{2}\right)}{\int_{-\infty}^{+\infty}dx\,\exp\left(-\frac{1}{2}(A-C^{2}/B)x^{2}\right)\mbox{\int_{-\infty}^{+\infty}\ensuremath{dy}exp}\left(-\frac{1}{2}B(y+Cx/B)^{2}\right)}\\
+ & =\frac{\int_{-\infty}^{+\infty}dx\,x^{2}\exp\left(-\frac{1}{2}(A-C^{2}/B)x^{2}\right)}{\int_{-\infty}^{+\infty}dx\,\exp\left(-\frac{1}{2}(A-C^{2}/B)x^{2}\right)}
 \end{align}
 
 \end_inset
 
+
+\end_layout
+
+\begin_layout Standard
+Note that from 0.12 to 0.13:
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula $\int_{-\infty}^{+\infty}dy\exp\left(-\frac{1}{2}B(y+Cx/B)^{2}\right)=\int_{-\infty-cx/B}^{+\infty-cx/B}dy'\exp\left(-\frac{1}{2}By'{}^{2}\right)=\int_{-\infty}^{+\infty}dy'\exp\left(-\frac{1}{2}By'^{2}\right)$
+\end_inset
+
+ 
+\end_layout
+
+\begin_layout Standard
+So that integral is not related to 
+\begin_inset Formula $x.$
+\end_inset
+
+ That's why we can cancel out that term from both numerator and denominator.
+\end_layout
+
+\begin_layout Standard
 If we set 
 \begin_inset Formula $\sigma^{2}=1/(A-C^{2}/B)$
 \end_inset
