--- a/HW4/hw4_final.tex
+++ b/HW4/hw4_final.tex
@@ -529,7 +529,7 @@ did is that $\boldsymbol{Q}^{T}\begin{pmatrix}x\\
 y
 \end{pmatrix}$ gives the projection of $\begin{pmatrix}x\\
 y
-\end{pmatrix}$ onto $\boldsymbol{e}_{1}$and $\boldsymbol{e}_{2}$where $\boldsymbol{Q}=(\boldsymbol{e}_{1},\boldsymbol{e}_{2}).$
+\end{pmatrix}$ onto $\boldsymbol{e}_{1}$ and $\boldsymbol{e}_{2}$ where $\boldsymbol{Q}=(\boldsymbol{e}_{1},\boldsymbol{e}_{2}).$
 
 
 \subsubsection*{(c)-5 points}
@@ -547,7 +547,7 @@ dealing with an integral of the f
 
 Note that from 0.12 to 0.13:
 
-$\int_{-\infty}^{+\infty}dy\exp\left(-\frac{1}{2}B(y+Cx/B)^{2}\right)=\int_{-\infty-cx/B}^{+\infty-cx/B}dy'\exp\left(-\frac{1}{2}By'{}^{2}\right)=\int_{-\infty}^{+\infty}dy'\exp\left(-\frac{1}{2}By'^{2}\right)$ 
+$\int_{-\infty}^{+\infty}dy\exp\left(-\frac{1}{2}B(y+Cx/B)^{2}\right)=\int_{-\infty+cx/B}^{+\infty+cx/B}dy'\exp\left(-\frac{1}{2}By'{}^{2}\right)=\int_{-\infty}^{+\infty}dy'\exp\left(-\frac{1}{2}By'^{2}\right)$ 
 
 So that integral is not related to $x.$ That's why we can cancel
 out that term from both numerator and denominator.
